@@ -1,8 +1,0 @@
-use strict;
-use ExtUtils::MakeMaker;
-
-WriteMakefile(
-	NAME			=> 'Tie::Simple',
-	VERSION_FROM	=> 'Simple.pm',
-	AUTHOR			=> 'Andrew Sterling Hanenkamp <hanenkamp@users.sourceforge.net>',
-);
