@@ -1,0 +1,37 @@
+name     = Tie-Simple
+abstract = Variable ties made much easier: much, much, much easier...
+author   = Andrew Sterling Hanenkamp <hanenkamp@cpan.org>
+copyright_holder = Qubling Software LLC
+license  = Perl_5
+
+[@Filter]
+-bundle = @Basic
+
+[AutoPrereqs]
+
+[Git::NextVersion]
+[Git::Check]
+[Git::Commit]
+[Git::Push]
+[Git::Tag]
+
+[MetaJSON]
+
+[MetaResources]
+bugtracker.web = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Tie-Simple
+bugtracker.mailto = bug-Tie-Simple@rt.cpan.org
+repository.url = git://github.com/zostay/Tie-Simple.git
+repository.web = http://github.com/zostay/Tie-Simple
+repository.type = git
+
+[NextRelease]
+
+[PruneFiles]
+; This is for github only
+filenames = README.md
+
+[PkgVersion]
+[PodWeaver]
+
+[PodSyntaxTests]
+[PodCoverageTests]
